--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,14 @@ services:
       - --providers.docker.network=mynet # <== Operate on the docker network named web
       ## Entrypoints Settings - https://docs.traefik.io/routing/entrypoints/#configuration ##
       - --entrypoints.web.address=:80 # <== Defining an entrypoint for port :80 named web
-      #- --entrypoints.web-secured.address=:443 # <== Defining an entrypoint for https on port :443 named web-secured
+      - --entrypoints.web-secured.address=:443 # <== Defining an entrypoint for https on port :443 named web-secured
       ## Certificate Settings (Let's Encrypt) -  https://docs.traefik.io/https/acme/#configuration-examples ##
-      #- --certificatesresolvers.mytlschallenge.acme.tlschallenge=true # <== Enable TLS-ALPN-01 to generate and renew ACME certs
-      #- --certificatesresolvers.mytlschallenge.acme.email=theafkdeveloper@gmail.com # <== Setting email for certs
-      #- --certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json # <== Defining acme file to store cert information
+      - --certificatesresolvers.mytlschallenge.acme.tlschallenge=true # <== Enable TLS-ALPN-01 to generate and renew ACME certs
+      - --certificatesresolvers.mytlschallenge.acme.email=theafkdeveloper@gmail.com # <== Setting email for certs
+      - --certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json # <== Defining acme file to store cert information
+      - --certificatesresolvers.mytlschallenge.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory   
     volumes:
-      #- ./letsencrypt:/letsencrypt # <== Volume for certs (TLS)
+      - ./letsencrypt:/letsencrypt # <== Volume for certs (TLS)
       - /var/run/docker.sock:/var/run/docker.sock # <== Volume for docker admin
       #- ./dynamic.yaml:/dynamic.yaml # <== Volume for dynamic conf file, **ref: line 27
     networks:
@@ -38,7 +39,7 @@ services:
     labels:
     #### Labels define the behavior and rules of the traefik proxy for this container ####
       - "traefik.enable=true" # <== Enable traefik on itself to view dashboard and assign subdomain to view it
-      - "traefik.http.routers.api.rule=Host(`192.168.186.131`)" # <== Setting the domain for the dashboard
+      - "traefik.http.routers.api.rule=Host(`dockermodule21.ddns.net`)" # <== Setting the domain for the dashboard
       - "traefik.http.routers.api.service=api@internal" # <== Enabling the api to be a service to access
 
 
@@ -63,8 +64,9 @@ services:
 
       - "traefik.http.routers.bazarr.rule=PathPrefix(`/bazarr{regex:$$|/.*}`)"
      
-      - "traefik.http.routers.bazarr_back.tls=true" 
-      - "traefik.http.routers.bazarr_back.entrypoints=web"
+      - "traefik.http.routers.bazar_back.tls=true" 
+      - "traefik.http.routers.bazarr_back.entrypoints=web-secured"
+      - "traefik.http.routers.bazarr_back.tls.certresolver=mytlschallenge"
       - "traefik.http.routers.bazarr_back.service=bazarr_back"
       - "traefik.http.services.bazarr_back.loadbalancer.server.port=6767"
     networks:
