--- a/bazarr/data/config/config.ini
+++ b/bazarr/data/config/config.ini
@@ -57,8 +57,8 @@ apikey = 4b8d35cfc238d985e4275f7e3bac46f2
 [sonarr]
 ip = 127.0.0.1
 port = 8989
-base_url = /
-ssl = False
+base_url = /sonarr
+ssl = True
 apikey = 
 full_update = Daily
 full_update_day = 6
@@ -72,8 +72,8 @@ excluded_series_types = []
 [radarr]
 ip = 127.0.0.1
 port = 7878
-base_url = /
-ssl = False
+base_url = /radarr
+ssl = True
 apikey = 
 full_update = Daily
 full_update_day = 6
